2000-09-20  Gene Z. Ragan  <gzr@eazel.com>

	Fixed a bug where transferring symbolic links from an ftp
	site would crash nautilus.  Links are now properly identified.
	
	* libgnomevfs/gnome-vfs-module-shared.c:
	(gnome_vfs_stat_to_file_info):
	Handle symbolic links.
	
	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory), (copy_items):
	Replace some plain asserts with assert_unreachable
	
	* modules/ftp-method.c: (get_response), (do_control_write),
	(ftp_connection_aquire), (ftp_connection_release),
	(ls_to_file_info), (do_get_file_info):
	
2000-09-20  Darin Adler  <darin@eazel.com>

	* data/mime/gnome-vfs.applications: Both EOG and The Gimp had
	entries that claim they can handle URIs, but the versions of these
	programs that I have can't.
	
	* libgnomevfs/gnome-vfs-configuration.c: (parse_line):
	* libgnomevfs/gnome-vfs-mime-info.c: (does_string_contains_caps):
	On IRC, gmorten pointed out that we must cast to unsigned char before
	calling functions like isspace and isupper. There are probably other
	cases of this mistake here and in Nautilus, but here are some fixes.
	
	* libgnomevfs/gnome-vfs-gen-mimedb.c: Removed an unnecessary
	include of <ctype.h>.
	
	* test/test-uri.c: (main): Fixed some typos and enabled some
	tests.  We like to put the "wrong" results in here with a FIXME
	instead of commenting out the tests altogether.

2000-09-20  Gene Z. Ragan  <gzr@eazel.com>

	Renabled and cleaned up read only volume check.
	
	* libgnomevfs/gnome-vfs-xfer.c: 
	(gnome_vfs_xfer_uri_internal):

2000-09-20  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 1214, check if copy destination has enough room.

	This only works for local file systems.
	
	* libgnomevfs/gnome-vfs-uri.c:
	* libgnomevfs/gnome-vfs-utils.c: 
	(gnome_vfs_get_volume_free_space):
	New function that gets free space on volume
	
	* libgnomevfs/gnome-vfs-xfer.c: 
	(gnome_vfs_xfer_uri_internal):
	Call gnome_vfs_get_volume_free_space () before copy.

2000-09-20  Maciej Stachowiak  <mjs@eazel.com>
